name:                fluxx
version:             0
synopsis:            Fluxx utility clients
license:             BSD3
author:              Dylan Simon
maintainer:          dylan@dylex.net
stability:           Experimental
tested-with:         GHC == 7.10.2
build-type:          Simple
cabal-version:       >= 1.10

executable fluxxpdf
  main-is: fluxxpdf.hs
  default-language: Haskell2010
  default-extensions: OverloadedStrings, GeneralizedNewtypeDeriving
  build-depends:
    base == 4.8.*,
    containers == 0.5.*,
    filepath == 1.4.*,
    directory == 1.2.*,
    time == 1.5.*,
    process == 1.2.*,
    mtl == 2.2.*,
    transformers == 0.4.*,
    bytestring == 0.10.*,
    network-uri == 2.6.*,
    http-types == 0.9.*,
    http-client == 0.4.*,
    http-client-tls == 0.2.*,
    haskeline == 0.7.*,
    text == 1.2.*,
    vector == 0.11.*,
    unordered-containers == 0.2.*,
    aeson == 0.11.*,
    attoparsec == 0.13.*,
    uuid == 1.*,
    tagsoup == 0.13.*
  ghc-options: -Wall
